# aituber

./: .gitignore  README.md  aituber.py  bedrock_client.py  main.py  model-source.json  obs_text_display.py  pyproject.toml  run_tests.sh  system_prompt.txt  voicevox_synthesizer.py  youtube_live_chat.py
src/: config.py  main.py
src/app/: config.py  main.py
src/application/: aituber.py  aituber_service.py
src/domain/entities/: ai_response.py  chat_message.py
src/domain/services/: ai_response_service.py  ai_response_servidce.py  text_to_speech_service.py  youtube_live_service.py
src/infrastructure/: bedrock_client.py  voicevox_synthesizer.py  youtube_api_client.py
src/presentation/: cli.py
src/utils/: logger.py
tests/: test_ai_response_service.py  test_bedrock_client.py  test_cli.py
